--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <app-root></app-root>
 </body>
 </html>
